--- a/.env
+++ b/.env
@@ -19,3 +19,5 @@ APP_SECRET=5efe1ac31fa0e2ea650649a345a1cd83
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+HOST_AUTHENTICATION_SERVICE=
