organized directories and removed wrong files

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+    path: /reset-password
+    controller: App\Framework\Controller\RequestResetPasswordController
