Allow requests from frontend

--- a/.env
+++ b/.env
@@ -21,3 +21,7 @@ APP_SECRET=5efe1ac31fa0e2ea650649a345a1cd83
 ###< symfony/framework-bundle ###
 
 HOST_AUTHENTICATION_SERVICE=
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
